--- a/Recipes.API/appsettings.json
+++ b/Recipes.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RecipesConnectionString": "Server=localhost;Database=RecipesDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
